--- a/src/opendialog.ui
+++ b/src/opendialog.ui
@@ -230,7 +230,7 @@
             </sizepolicy>
            </property>
            <property name="editable">
-            <bool>true</bool>
+            <bool>false</bool>
            </property>
           </widget>
          </item>
