--- a/src/resource.qrc
+++ b/src/resource.qrc
@@ -10,5 +10,6 @@
     <file>res/file.png</file>
     <file>res/folder.png</file>
     <file>res/step_out.png</file>
+    <file>res/down.png</file>
  </qresource>
 </RCC>
